Refactor InfinityPickaxes into InfinityGear